[FEAT] 오픈채팅방 기능 추가 구현
